--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^4.0.7",
+    "@rails/webpacker": "3.4",
     "local-time": "^2.1.0",
     "rails-erb-loader": "^5.5.2",
     "rails-ujs": "^5.2.3",
@@ -14,6 +14,6 @@
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "2.11.2"
   }
 }
