--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "3.4",
+    "bulma": "^0.7.5",
     "local-time": "^2.1.0",
     "rails-erb-loader": "^5.5.2",
     "rails-ujs": "^5.2.3",
